[refactor/#355] historyImageRepository Service 레이어 삭제, HistoryClothRepositoryService 삭제